[package]
name = "kui"
version = "0.1.0"
authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fontdue = "0.2.4"
rect_packer = "0.2.1"

[dev-dependencies]
kapp = { path="../kapp"}
glow = {git = "https://github.com/grovesNL/glow"}


